samples/_failures_safe/1761130131_1d8a4e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9b483d53.c: In function ‘main’:
./samples/SAFE/__tmp_9b483d53.c:173:5: error: expected expression at end of input
  173 |     printf("Tokens found: %zu\n",
      |     ^~~~~~
./samples/SAFE/__tmp_9b483d53.c:173:5: error: expected declaration or statement at end of input
